--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,15 @@ cache
 artifacts
 
 
+
+node_modules
+.env
+coverage
+coverage.json
+typechain
+typechain-types
+
+# Hardhat files
+cache
+artifacts
+
