--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "typechain": "^8.1.0"
   },
   "dependencies": {
-    "@chainlink/contracts": "^0.8.0"
+    "@chainlink/contracts": "^0.8.0",
+    "@openzeppelin/contracts": "^5.0.0"
   }
 }
